# rlmep

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: discrete_mep.ipynb  reaction.py
exercises/: ex1_working.ipynb  ex2_working.ipynb  ex3_working.ipynb  exercise_1_qlearning_frozenlake.ipynb  exercise_1_qlearning_frozenlake_solution.ipynb  exercise_2_mep_env.ipynb  exercise_2_mep_env_solution.ipynb  exercise_3_mep_continued.ipynb  exercise_3_mep_continued_solution.ipynb  exercise_3_policy_gradient.ipynb  test_notebook.ipynb
slides/: slides.pptx
src/rlmep/: __init__.py  example_function.py
src/rlmep/agents/: __init__.py  base.py  q_learning.py  random.py  reinforce.py
src/rlmep/data/: __init__.py  cluster_data.py  final.traj  initial_0.traj  initial_1.traj  initial_2.traj  neb.traj
src/rlmep/envs/: __init__.py  discrete_mep.py  reactor.py
src/rlmep/exercise_1/: __init__.py  dqn_learner.py  experience_replay.py  get_batch.py  plot_qvalues.py  q_tabular.py  qnet.py
src/rlmep/exercise_2/: __init__.py  diffusion_env.py  discrete_mep.py  discrete_mep_scaffold.py  example_figure.py  grid_spec.py  qplotter.py
src/rlmep/exercise_3/: __init__.py  plot_levels.py
src/rlmep/utils/: __init__.py  colored_line.py  colors.py  plot_atoms.py  plot_cell.py  plot_qvalues.py  plot_returns.py
