[project]
name = "rlmep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.11"
dependencies = [
    "ase>=3.25.0",
    "gymnasium>=1.1.1",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "ruff>=0.11.7",
    "tensordict>=0.7.2",
    "torch>=2.7.0",
]

[project.scripts]
rlmep = "rlmep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88