[project]
name = "rlmep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.11"
dependencies = [
    "ase>=3.25.0",
    "gymnasium==1.1.1",
    "ipykernel==6.17.1",
    "ipywidgets==7.7.1",
    "matplotlib==3.10.0",
    "numpy<2.1.0,>=1.22",
    "pygame>=2.6.1",
    "rich<14,>=12.4.4",
    "ruff>=0.11.7",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
colab = ["torch==2.6.0+cu124"]
local = ["torch"]

[tool.setuptools.package-data]
rlmep = ["*.traj"]

[project.scripts]
rlmep = "rlmep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
